--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,12 @@
 .app.dark {
     --bg-color: #04042b;
+    --inverted-bg-color: #e8e8ea;
 
     --primary-color: #049604;
+    --inverted-primary-color: #0232c2;
     --secondary-color: #04ff04;
+    --inverted-secondary-color: #0449e0;
+
+    --footer-bg-color: #fff;
+    --footer-font-color: #252525;
 }
