--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -13,3 +13,9 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+button{
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
