--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,6 +1,6 @@
 
 .nav {
-    background-color: var(--inverted-bg-color);
+    // background-color: var(--inverted-bg-color);
     ul {
         display: flex;
         align-items: center;
