--- a/src/app/styles/variables/index.scss
+++ b/src/app/styles/variables/index.scss
@@ -7,5 +7,5 @@
 
     --fonst-size-l: 24px;
     --font-line-l: 32px;
-    --font-l: var(--fonst-size-m) var(--font-line-m) var(--font-family-main);
+    --font-l: var(--fonst-size-l) var(--font-line-l) var(--font-family-main);
 }
