--- a/src/widgets/Switchers/ui/LangSwitcher/ui/LangSwitcher.module.scss
+++ b/src/widgets/Switchers/ui/LangSwitcher/ui/LangSwitcher.module.scss
@@ -12,7 +12,7 @@
     height: 30px;
     border-radius: 23px;
     background-color: var(--inverted-bg-color);
-    box-shadow: 5px 5px 10px 0px #1C1C1C;
+    box-shadow: 5px 5px 10px 0 #1C1C1C;
     position: relative;
 
     &::after {
