--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,4 +1,4 @@
-@import 'reset.scss';
+@import 'reset';
 @import 'variables';
 @import 'themes';
 
@@ -12,14 +12,17 @@
 	display: flex;
 	flex-direction: column;
 }
+
 main {
 	flex-grow: 1;
 }
+
 .wrapper {
 	display: flex;
 	height: 100%;
 	flex-grow: 1;
 }
+
 .container {
 	max-width: 1400px;
 	padding: 0 15px;
