--- a/src/widgets/Switchers/ui/ThemeSwitcher/ui/ThemeSwither.module.scss
+++ b/src/widgets/Switchers/ui/ThemeSwitcher/ui/ThemeSwither.module.scss
@@ -1,34 +1,34 @@
 .btn {
-    background-color: transparent;
-    color: var(--inverted-primary-color);
-    display: flex;
-    align-items: center;
-    gap: 10px;
+	background-color: transparent;
+	color: var(--inverted-primary-color);
+	display: flex;
+	align-items: center;
+	gap: 10px;
 }
 
 .round {
-    display: block;
-    width: 53px;
-    height: 30px;
-    border-radius: 23px;
-    background-color: var(--inverted-bg-color);
-    box-shadow: 5px 5px 10px 0px #1C1C1C;
-    position: relative;
+	display: block;
+	width: 53px;
+	height: 30px;
+	border-radius: 23px;
+	background-color: var(--inverted-bg-color);
+	box-shadow: 5px 5px 10px 0 #1c1c1c;
+	position: relative;
 
-    &::after {
-        content: "";
-        position: absolute;
-        width: 26px;
-        height: 26px;
-        background-color: var(--inverted-primary-color);
-        border-radius: 50%;
-        left: 4px;
-        top: 50%;
-        transform: translateY(-50%);
-        transition: transform .2s ease;
-    }
+	&::after {
+		content: '';
+		position: absolute;
+		width: 26px;
+		height: 26px;
+		background-color: var(--inverted-primary-color);
+		border-radius: 50%;
+		left: 4px;
+		top: 50%;
+		transform: translateY(-50%);
+		transition: transform 0.2s ease;
+	}
 
-    &.switched::after {
-        transform: translate(20px, -50%);
-    }
+	&.switched::after {
+		transform: translate(20px, -50%);
+	}
 }
