--- a/src/widgets/Switchers/ui/ThemeSwitcher/ui/ThemeSwitcher.module.scss
+++ b/src/widgets/Switchers/ui/ThemeSwitcher/ui/ThemeSwitcher.module.scss
@@ -11,8 +11,8 @@
 	width: 53px;
 	height: 30px;
 	border-radius: 23px;
-	background-color: var(--inverted-bg-color);
-	box-shadow: 5px 5px 10px 0 #1c1c1c;
+	background-color: var(--bg-color);
+	box-shadow: 5px 5px 10px 0px #1c1c1c;
 	position: relative;
 
 	&::after {
