--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -1,6 +1,14 @@
+.header {
+	background-color: var(--inverted-bg-color);
+}
 .inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px 0;
+}
+.logo {
+	color: var(--inverted-primary-color);
+	font-weight: 700;
+	font-size: 24px;
 }
