--- a/src/widgets/Switchers/ui/ThemeSwitcher/ui/ThemeSwitcher.module.scss
+++ b/src/widgets/Switchers/ui/ThemeSwitcher/ui/ThemeSwitcher.module.scss
@@ -12,7 +12,7 @@
 	height: 30px;
 	border-radius: 23px;
 	background-color: var(--bg-color);
-	box-shadow: 5px 5px 10px 0px #1c1c1c;
+	box-shadow: 5px 5px 10px 0 #1c1c1c;
 	position: relative;
 
 	&::after {
