--- a/src/shared/ui/AppButton/Button.module.scss
+++ b/src/shared/ui/AppButton/Button.module.scss
@@ -1,11 +1,30 @@
 .button {
-    cursor: pointer;
-    color: var(--primary-color);
+	cursor: pointer;
+	color: var(--primary-color);
+}
+.clear {
+	padding: 0;
+	border: 0;
+	background: 0;
+	outline: none;
 }
 
-.clear {
-    padding: 0;
-    border: none;
-    background: none;
-    outline: none;
+.blue {
+	background-color: #4141e4;
+	padding: 10px 40px;
+	border-radius: 20px;
+	color: #fff;
+	border: 0;
+	outline: 0;
+	font-size: 18px;
+}
+
+.outline {
+	padding: 10px 40px;
+	border-radius: 20px;
+	color: #4141e4;
+	border: 1px solid #4141e4;
+	background-color: transparent;
+	outline: 0;
+	font-size: 18px;
 }
