--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -1,29 +1,42 @@
 .sidebar {
 	background-color: var(--inverted-bg-color);
-	width: 205px;
-	transition: width 0.3s ease;
+	width: 0;
+	transition: width 0.3s ease-out;
 	position: relative;
 
 	.button_open {
-		color: var(--inverted-primary-color);
-		margin-right: 20px;
-		font-size: 16px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: var(--inverted-bg-color);
 		font-weight: 700;
-		transition: transform 0.5s ease;
+		width: 30px;
+		height: 40px;
+		border-radius: 0 4px 4px 0px;
+		cursor: pointer;
+
+		svg {
+			transition: transform 0.5s ease;
+			zoom: 1.3;
+			path {
+				fill: var(--bg-color);
+			}
+		}
 	}
 
 	&.collapsed {
-		width: 400px;
+		width: 200px;
 
-		.button_open {
+		.button_open svg {
 			transform: scale(-1);
 		}
 	}
 }
 
 .button_wrapper {
-	display: flex;
-	justify-content: flex-end;
+	position: absolute;
+	right: -30px;
+	top: 8px;
 }
 
 .switchers {
@@ -35,4 +48,13 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 30px;
+	opacity: 0;
+	pointer-events: none;
+	transition: 0.3s;
+	user-select: none;
+	:global(.sidebar-open) & {
+		opacity: 1;
+		transition: 0.3s 0.3s;
+		pointer-events: all;
+	}
 }
