--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -12,12 +12,13 @@
 		font-weight: 700;
 		width: 30px;
 		height: 40px;
-		border-radius: 0 4px 4px 0px;
+		border-radius: 0 4px 4px 0;
 		cursor: pointer;
 
 		svg {
 			transition: transform 0.5s ease;
 			zoom: 1.3;
+
 			path {
 				fill: var(--bg-color);
 			}
@@ -52,6 +53,7 @@
 	pointer-events: none;
 	transition: 0.3s;
 	user-select: none;
+	/* stylelint-disable-next-line selector-pseudo-class-no-unknown */
 	:global(.sidebar-open) & {
 		opacity: 1;
 		transition: 0.3s 0.3s;
