--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,6 +1,7 @@
 .Button {
 	cursor: pointer;
-	color: var(--primary-color);
+	padding: 10px 20px;
+	border-radius: 30px;
 }
 
 .clear {
@@ -8,4 +9,22 @@
 	border: none;
 	background: none;
 	outline: none;
+}
+
+.outline {
+	color: var(--primary-color);
+	border: 1px solid var(--primary-color);
+	background: none;
+}
+
+.background {
+	background: var(--bg-color);
+	color: var(--primary-color);
+	border: none;
+}
+
+.backgroundInverted {
+	background: var(--inverted-bg-color);
+	color: var(--inverted-primary-color);
+	border: none;
 }
