--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,8 +1,49 @@
 .nav {
-	// background-color: var(--inverted-bg-color);
+	padding: 10px 20px;
+	top: 0;
+	left: 0;
+
 	ul {
 		display: flex;
-		align-items: center;
-		gap: 30px;
+		flex-direction: column;
+
+		li {
+			margin-bottom: 22px;
+			align-items: center;
+		}
 	}
+}
+
+.link {
+	display: flex;
+	align-items: center;
+	flex-wrap: nowrap;
+}
+
+.logo {
+	display: block;
+	margin-right: 10px;
+	width: 20px;
+	flex: 0 0  20px;
+
+	path {
+		fill: var(--inverted-primary-color);
+	}
+}
+
+.text {
+	flex: 1 1 auto;
+	line-height: 1;
+	opacity: 0;
+	white-space: nowrap;
+	visibility: hidden;
+	transition: .3s;
+	width: 0;
+	
+	[class^="sidebar-open"] & {
+		opacity: 1;
+		transition:  .3s .3s;
+		visibility: visible;
+	}
+
 }
