--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -1,44 +1,49 @@
 .sidebar {
 	background-color: var(--inverted-bg-color);
-	width: 0;
+	width: 77px;
 	transition: width 0.3s ease-out;
 	position: relative;
 
-	.button_open {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		background-color: var(--inverted-bg-color);
-		font-weight: 700;
-		width: 30px;
-		height: 40px;
-		border-radius: 0 4px 4px 0;
-		cursor: pointer;
-
-		svg {
-			transition: transform 0.5s ease;
-			zoom: 1.3;
-
-			path {
-				fill: var(--bg-color);
-			}
-		}
-	}
-
 	&.collapsed {
 		width: 200px;
-
-		.button_open svg {
-			transform: scale(-1);
-		}
 	}
+
+	
 }
 
-.button_wrapper {
+.button_open {
 	position: absolute;
 	right: -30px;
 	top: 8px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--inverted-bg-color);
+	font-weight: 700;
+	width: 30px;
+	height: 40px;
+	border-radius: 0 4px 4px 0;
+	cursor: pointer;
+
+	svg {
+		transition: transform 0.5s ease;
+		zoom: 1.3;
+
+		.collapsed &{
+			transform: scale(-1);
+		}
+
+		path {
+			fill: var(--bg-color);
+		}
+	}
 }
+
+.inner {
+	overflow: hidden;
+}
+
+
 
 .switchers {
 	position: absolute;
@@ -53,8 +58,9 @@
 	pointer-events: none;
 	transition: 0.3s;
 	user-select: none;
-	/* stylelint-disable-next-line selector-pseudo-class-no-unknown */
-	:global(.sidebar-open) & {
+	white-space: nowrap;
+
+	.collapsed & {
 		opacity: 1;
 		transition: 0.3s 0.3s;
 		pointer-events: all;
