--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -1,14 +1,12 @@
 .sidebar {
 	background-color: var(--inverted-bg-color);
-	width: 77px;
+	width: 62px;
 	transition: width 0.3s ease-out;
 	position: relative;
 
 	&.collapsed {
-		width: 200px;
+		width: 170px;
 	}
-
-	
 }
 
 .button_open {
@@ -26,10 +24,12 @@
 	cursor: pointer;
 
 	svg {
+		display: block;
+		flex-shrink: 0;
 		transition: transform 0.5s ease;
 		zoom: 1.3;
 
-		.collapsed &{
+		.collapsed & {
 			transform: scale(-1);
 		}
 
@@ -42,8 +42,6 @@
 .inner {
 	overflow: hidden;
 }
-
-
 
 .switchers {
 	position: absolute;
