--- a/src/app/styles/variables/index.scss
+++ b/src/app/styles/variables/index.scss
@@ -7,6 +7,6 @@
 	--font-line-l: 32px;
 	--font-l: var(--fonst-size-l) var(--font-line-l) var(--font-family-main);
 
-	//Colors
-	--overlay-color: rgba(25 25 25 / 0.7);
+	// Colors
+	--overlay-color: rgba(25 25 25 / 70%);
 }
