--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,14 +1,12 @@
 .modal {
 	position: fixed;
-	left: 0;
-	top: 0;
-	right: 0;
-	bottom: 0;
+	inset: 0;
 	z-index: 10;
 	opacity: 0;
 	visibility: hidden;
 	pointer-events: none;
 	transition: 0.1s 0.1s linear;
+
 	&.opened {
 		transition: 0.1s linear;
 		pointer-events: auto;
@@ -16,6 +14,7 @@
 		visibility: visible;
 	}
 }
+
 .overlay {
 	display: flex;
 	justify-content: center;
@@ -25,6 +24,7 @@
 	background-color: var(--overlay-color);
 	backdrop-filter: blur(5px);
 }
+
 .content {
 	padding: 20px;
 	border-radius: 12px;
@@ -34,6 +34,7 @@
 	opacity: 0;
 	transition: all 0.2s ease;
 	max-width: 60%;
+
 	.opened & {
 		transition: all 0.2s 0.1s ease;
 		opacity: 1;
