--- a/src/app/styles/variables/index.scss
+++ b/src/app/styles/variables/index.scss
@@ -1,11 +1,11 @@
 :root {
-	--font-family-main: consolas, 'Times New Roman', serif;
-	--fonst-size-m: 16px;
+	--font-family-main: sans-serif, 'Times New Roman', serif;
+	--font-size-m: 16px;
 	--font-line-m: 24px;
-	--font-m: var(--fonst-size-m) / var(--font-line-m) var(--font-family-main);
-	--fonst-size-l: 24px;
+	--font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+	--font-size-l: 24px;
 	--font-line-l: 32px;
-	--font-l: var(--fonst-size-l) var(--font-line-l) var(--font-family-main);
+	--font-l: var(--font-size-l) var(--font-line-l) var(--font-family-main);
 
 	// Colors
 	--overlay-color: rgba(25 25 25 / 70%);
