--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,21 +1,26 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 ul,
 ol {
-    list-style: none;
+	list-style: none;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
-button{
-    background-color: transparent;
-    border: none;
-    outline: none;
+input {
+	outline: none;
+	border: none;
+}
+
+button {
+	background-color: transparent;
+	border: none;
+	outline: none;
 }
