--- a/src/app/styles/variables/index.scss
+++ b/src/app/styles/variables/index.scss
@@ -5,8 +5,9 @@
 	--font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
 	--font-size-l: 24px;
 	--font-line-l: 32px;
-	--font-l: var(--font-size-l) var(--font-line-l) var(--font-family-main);
+	--font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
 
 	// Colors
 	--overlay-color: rgba(25 25 25 / 70%);
+	--red: #f62323;
 }
