--- a/src/shared/ui/Loader/Loader.module.scss
+++ b/src/shared/ui/Loader/Loader.module.scss
@@ -8,7 +8,7 @@
 		position: absolute;
 		width: 6px;
 		height: 6px;
-		background: var(--inverted-bg-color);
+		background: var(--primary-color);
 		border-radius: 50%;
 		animation: loader 1.2s linear infinite;
 	}
