--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -9,5 +9,10 @@
 		&:disabled {
 			color: var(--primary-color);
 		}
+
+		&::placeholder {
+			color: var(--primary-color);
+			opacity: 0.5;
+		}
 	}
 }
