--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -1,34 +1,38 @@
 .select {
-	display: inline-block;
+	display: block;
 	user-select: none;
 	position: relative;
-	width: 500px;
-	margin-bottom: 10px;
 
 	input {
 		display: none;
 	}
+
+	&.disabled {
+		pointer-events: none;
+	}
 }
 
-.select_button {
+.button {
 	display: inline-flex;
 	align-items: center;
 	position: relative;
 	border: 1px solid #252525;
-	border-radius: 4px;
+	border-radius: 30px;
 	cursor: pointer;
-	height: 42px;
+	height: 40px;
 	width: 100%;
-	padding: 0 42px 0 12px;
-	background-color: #fff;
+	font-size: 16px;
+	color: var(--primary-color);
+	padding: 10px 42px 10px 20px;
+	background-color: #6a6a6a;
 	z-index: 5;
 }
 
-.select.opened .select_button {
-	box-shadow: 0 0 20px 5px #400769;
+.select.opened .button {
+	border: 1px solid var(--primary-color);
 }
 
-.select_button::after {
+.button::after {
 	position: absolute;
 	right: 16px;
 	top: 50%;
@@ -45,12 +49,7 @@
 	pointer-events: none;
 }
 
-.bitrix24-dark-theme .select_button::after {
-	border-color: #000 transparent transparent;
-}
-
-.select_popup {
-	/* display: none; */
+.popup {
 	visibility: hidden;
 	transform: translateY(-10%);
 	opacity: 0;
@@ -60,28 +59,29 @@
 	left: 0;
 	width: 100%;
 	z-index: 10;
-	background-color: #fff;
+	background-color: #6a6a6a;
 	color: #000;
 	border-radius: 4px;
 	box-shadow: 0 7px 21px rgb(83 92 105 / 12%), 0 -1px 6px 0 rgb(83 92 105 / 6%);
 }
 
-.select_list {
+.list {
+	background-color: #6a6a6a;
 	overflow: hidden;
 	border-radius: 4px;
 }
 
-.select.opened .select_popup {
+.select.opened .popup {
 	visibility: visible;
 	transform: translateY(0);
 	opacity: 1;
 }
 
-.select.opened .select_button::after {
+.select.opened .button::after {
 	transform: rotate(180deg);
 }
 
-.select_list_angly {
+.angly {
 	display: block;
 	position: absolute;
 	right: 10px;
@@ -93,13 +93,13 @@
 	transform: rotate(180deg);
 }
 
-.select_list_angly::after {
+.angly::after {
 	content: '';
 	display: block;
 	position: absolute;
 	left: 5px;
 	bottom: 5px;
-	background-color: #fff;
+	background-color: #6a6a6a;
 	box-shadow: 0 0 21px rgb(83 92 105 / 13%);
 	height: 15px;
 	transform: rotate(45deg);
@@ -107,23 +107,20 @@
 	width: 15px;
 }
 
-.select_item {
-	padding: 10px 12px;
-	border-radius: 4px;
+.item {
+	padding: 10px 20px;
 	cursor: pointer;
-}
+	color: var(--primary-color);
 
-.select_item:hover {
-	// background-color: #f2f2f2;
-	background: linear-gradient(101deg, #dfdfdf 0%, #f2f2f270 100%);
-}
+	&:not(:last-child) {
+		border-bottom: 1px solid var(--inverted-bg-color);
+	}
 
-.select_item.selected {
-	/* background: rgb(135,169,247); */
-	background: linear-gradient(101deg, #400769 0%, #8e51c7a7 100%);
-	color: #fff;
-}
+	&.selected {
+		background: #595959;
+	}
 
-.select_item:not(:last-child) {
-	border-bottom: 1px solid #dcdcdc;
+	&:hover {
+		background: var(--inverted-bg-color);
+	}
 }
