--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -12,4 +12,6 @@
 	--button-hover-bg: rgb(255 255 255 / 20%);
 	--bottom-shadow: 0 1px 2px rgb(244 236 204 / 30%);
 	--right-shadow: 1px 1px 2px rgb(244 236 204 / 30%);
+	--skeleton-color: #18181878;
+	--skeleton-shadow: #00000054;
 }
