--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -12,4 +12,6 @@
 	--button-hover-bg: rgb(0 0 0 / 20%);
 	--bottom-shadow: 0 1px 2px rgb(0 0 0 / 10%);
 	--right-shadow: 1px 1px 2px rgb(0 0 0 / 10%);
+	--skeleton-color: rgba(0 0 0 / 20%);
+	--skeleton-shadow: rgba(0 0 0 / 20%);
 }
