fonts, fetch articles

--- a/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
@@ -1,5 +1,21 @@
-// .content {
-// }
+.article {
+	padding-bottom: 60px;
+
+	&Avatar {
+		width: fit-content;
+		margin: 0 auto 40px;
+	}
+
+	&Title {
+		margin-bottom: 40px;
+	}
+
+	&Info {
+		display: flex;
+		align-items: center;
+		gap: 8px;
+	}
+}
 
 .skeleton {
 	display: grid;
@@ -8,4 +24,8 @@
 	div:first-child {
 		justify-self: center;
 	}
+}
+
+.block {
+	margin-bottom: 40px;
 }
