--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,5 +1,6 @@
 @import 'reset';
 @import 'variables';
+@import 'fonts';
 @import 'themes';
 
 .app {
@@ -15,6 +16,7 @@
 
 main {
 	flex-grow: 1;
+	width: 100%;
 }
 
 .wrapper {
@@ -31,4 +33,21 @@ main {
 
 .content {
 	padding: 40px 20px 20px 60px;
+	max-height: calc(100vh - 128px);
+	overflow: auto;
+	width: 100%;
+
+	&::-webkit-scrollbar {
+		width: 18px; /* ширина всей полосы прокрутки */
+	}
+
+	&::-webkit-scrollbar-track {
+		background: var(--inverted-bg-color); /* цвет зоны отслеживания */
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: var(--secondary-color);
+		border: 5px solid var(--inverted-bg-color); /* цвет бегунка */
+		border-radius: 20px; /* округлось бегунка */
+	}
 }
