--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,7 @@
 .app_dark_theme {
 	--bg-color: #313131;
 	--inverted-bg-color: #1f252a;
+	--inverted-bg-color-opacity: #1e242980;
 	--primary-color: rgb(244 236 204);
 	--inverted-primary-color: #252525;
 	--secondary-color: rgb(204 184 163 / 100%);
