--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,7 @@
 .app_light_theme {
 	--bg-color: #f8fafc;
 	--inverted-bg-color: #fff;
+	--inverted-bg-color-opacity: #ffffff80;
 	--primary-color: #252525;
 	--inverted-primary-color: #fff3c3;
 	--secondary-color: #031330;
