--- a/src/pages/ArticlesPage/ui/ArticlesPage/ArticlesPage.module.scss
+++ b/src/pages/ArticlesPage/ui/ArticlesPage/ArticlesPage.module.scss
@@ -1,3 +1,6 @@
-.articlePage {
-	display: block;
+.heading{
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	margin-bottom: 60px;
 }
