--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -1,7 +1,38 @@
 .item {
-	// &.LIST {
+	&.LIST {
+		position: relative;
 
-	// }
+		.user {
+			display: flex;
+			align-items: center;
+			gap: 16px;
+			position: absolute;
+			left: 10px;
+			top: 10px;
+
+			img {
+				width: 60px;
+				height: 60px;
+				border-radius: 50%;
+				object-fit: cover;
+			}
+
+		}
+
+		.img {
+			padding-bottom: 40%;
+			position: relative;
+
+			img {
+				position: absolute;
+				left: 0;
+				top: 0;
+				height: 100%;
+				width: 100%;
+				object-fit: cover;
+			}
+		}
+	}
 
 	&.TILES {
 		.image {
