--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,14 +1,20 @@
 .list {
 	display: grid;
-	gap: 20px;
+	gap: 24px;
 	max-width: 100%;
 
 	&.TILES {
-		grid-template-columns: repeat(3, calc((100% - 40px) / 3));
+		grid-template-columns: repeat(4, calc((100% - 72px) / 4));
 
-		@media (width <= 1024px){
+		@media (width <= 1600px){
+			&{ 
+				grid-template-columns: repeat(3, calc((100% - 48px) / 3));
+			}
+		}
+
+		@media (width <= 1200px){
 			&{
-				grid-template-columns: repeat(2, calc((100% - 20px) / 2));
+				grid-template-columns: repeat(2, calc((100% - 24px) / 2));
 			}
 		}
 
