articles list, filter

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -15,4 +15,5 @@
 	--right-shadow: 1px 1px 2px rgb(244 236 204 / 30%);
 	--skeleton-color: #18181878;
 	--skeleton-shadow: #00000054;
+	--card-bg: #1f252a;
 }
