--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -15,4 +15,5 @@
 	--right-shadow: 1px 1px 2px rgb(0 0 0 / 10%);
 	--skeleton-color: rgba(0 0 0 / 20%);
 	--skeleton-shadow: rgba(0 0 0 / 20%);
+	--card-bg: #dbdbdb;
 }
