--- a/src/entities/Article/ui/ArticleViewSelector/ArticleViewSelector.module.scss
+++ b/src/entities/Article/ui/ArticleViewSelector/ArticleViewSelector.module.scss
@@ -1,3 +1,11 @@
-.wrapper{
-	display: block;
+.view{
+	display: flex;
+}
+
+.viewBtn {
+	transition: .2s ease-in-out;
+
+	&:not(.active) {
+		opacity: .6;
+	}
 }
