--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -57,7 +57,7 @@
 	position: absolute;
 	top: 53px;
 	left: 0;
-	width: 100%;
+	width: max-content;
 	z-index: 10;
 	background-color: #6a6a6a;
 	color: #000;
